# aoc2021

./: .gitignore  Makefile  README.md
.github/workflows/: ci.yml
lang/: CMakeLists.txt  LICENSE.md  ast.cc  ast.h  checker.cc  checker.h  checker_test.cc  codegen.cc  codegen.h  compiler.cc  example.aoc  ir.cc  ir.h  link.ld  parser.cc  parser.h  parser_test.cc  run_tests.sh  source.cc  source.h  source_test.cc  string_utils.cc  string_utils.h  test.cc  test.h  variant_utils.h
lang/std/: std.aoc
lang/test_data/: aoc2020_day01.aoc  aoc2020_day01.input  aoc2020_day01.output  aoc2020_day02.aoc  aoc2020_day02.output  aoc2020_day22.aoc  aoc2020_day22.output  aoc2021_day05_scanline.aoc  aoc2021_day05_scanline.output  array_copy.aoc  array_copy.output  break.aoc  break.output  continue.aoc  declaration_order.aoc  die.aoc  die.output  equal.aoc  hello_world.aoc  hello_world.output  if.aoc  if.output  is_digit.aoc  is_digit.output  less_than.aoc  main_return.aoc  print_int.aoc  print_int.output  read_int.aoc  read_int.output  strlen.aoc  strlen.input  strlen.output
lang/test_data/std/: std.aoc  strings.aoc
puzzles/day01/: agata.output  joe.output  joshua.input  joshua.output
puzzles/day02/: agata.output  joe.output  (+1 more)
src/: approve.sh  day00.aoc  day01.aoc  day02.aoc  day03.aoc  day04.aoc  day05.aoc  day06.aoc  day07.aoc  day08.aoc  day09.aoc  day10.aoc  day11.aoc  day12.aoc  day13.aoc  day14.aoc  day15.aoc  day16.aoc  day17.aoc  day18.aoc  day19.aoc  day20.aoc  day21.aoc  day22.aoc  day23.aoc  day24.aoc  day25.aoc  fetch-puzzles.sh  fetch.sh  microtime.c  puzzles.filter  std  time.sh  verdict.sh
(+68 files in other folders)
